--- a/src/index.html
+++ b/src/index.html
@@ -34,6 +34,15 @@
             margin-bottom: 30px;
             letter-spacing: 1px;
         }
+        .section-title {
+            font-size: 1.2em;
+            color: #ff0000;
+            margin-top: 40px;
+            margin-bottom: 20px;
+            text-shadow: 0 0 10px rgba(255, 0, 0, 0.5);
+            border-bottom: 2px solid #7ec8e3;
+            padding-bottom: 10px;
+        }
         .projects-grid {
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
@@ -123,23 +132,27 @@
             <p class="subtitle">A collection of arcade-themed web apps & games</p>
         </div>
 
+        <div class="section-title">🎯 FEATURED</div>
         <div class="projects-grid">
             <div class="project-card featured-card">
                 <h3>Zach & Cen's Amtrak Journey</h3>
                 <p>Interactive journey from Penn Station to Rochester with games at each stop.</p>
                 <a href="amtrak-journey.html" class="project-link">PLAY →</a>
             </div>
+        </div>
 
-            <div class="project-card">
-                <h3>Noodle Inventory</h3>
-                <p>Track your noodle collection with style. Organize, categorize, and manage all your noodle types.</p>
-                <a href="noodle_inventory.html" class="project-link">PLAY →</a>
-            </div>
-
+        <div class="section-title">🕹️ ARCADE GAMES</div>
+        <div class="projects-grid">
             <div class="project-card">
                 <h3>Frogger</h3>
                 <p>Classic arcade frogger game. Jump across logs and lily pads to reach the other side!</p>
                 <a href="frogger.html" class="project-link">PLAY →</a>
+            </div>
+
+            <div class="project-card">
+                <h3>Snaker</h3>
+                <p>Classic snake game with arcade vibes. Eat pellets and grow your snake!</p>
+                <a href="snaker.html" class="project-link">PLAY →</a>
             </div>
 
             <div class="project-card">
@@ -149,57 +162,171 @@
             </div>
 
             <div class="project-card">
-                <h3>Snaker</h3>
-                <p>Classic snake game with arcade vibes. Eat pellets, grow longer, don't hit yourself!</p>
-                <a href="snaker.html" class="project-link">PLAY →</a>
+                <h3>Frog Whack-a-Mole</h3>
+                <p>Tap the frogs before they disappear. Fast-paced arcade action!</p>
+                <a href="frog_whack_a_mole.html" class="project-link">PLAY →</a>
             </div>
 
             <div class="project-card">
-                <h3>Borscht</h3>
-                <p>Recipe app for borscht with ingredient tracking and cooking instructions.</p>
-                <a href="borscht.html" class="project-link">VIEW →</a>
+                <h3>Bills QB Game</h3>
+                <p>Football throwing game. Test your accuracy and arm strength!</p>
+                <a href="bills_qb_game.html" class="project-link">PLAY →</a>
             </div>
 
             <div class="project-card">
-                <h3>Parlay Probability</h3>
-                <p>Visualize parlay betting probabilities and potential payouts. Do the math!</p>
-                <a href="parlay_probability_viz.html" class="project-link">VIEW →</a>
+                <h3>Jackson Biscuit Game</h3>
+                <p>Catch the falling biscuits! How many can you grab?</p>
+                <a href="jackson_biscuit_game.html" class="project-link">PLAY →</a>
             </div>
 
             <div class="project-card">
-                <h3>Subway Sub Ratio</h3>
-                <p>Calculate the perfect sub ratio. Meat, bread, and veggies in harmony.</p>
-                <a href="subway_sub_ratio.html" class="project-link">VIEW →</a>
+                <h3>Terminal Memory</h3>
+                <p>Memory matching game with a terminal aesthetic. Test your recall!</p>
+                <a href="terminal-memory.html" class="project-link">PLAY →</a>
             </div>
 
             <div class="project-card">
-                <h3>Planner</h3>
-                <p>Task planning and organization tool. Get things done in retro style.</p>
-                <a href="planner.html" class="project-link">VIEW →</a>
+                <h3>Double Dragon Beat 'Em Up</h3>
+                <p>Classic beat-em-up arcade action. Fight your way through!</p>
+                <a href="double_dragon_beatem_up.html" class="project-link">PLAY →</a>
+            </div>
+        </div>
+
+        <div class="section-title">📋 UTILITIES & APPS</div>
+        <div class="projects-grid">
+            <div class="project-card">
+                <h3>Noodle Inventory</h3>
+                <p>Track your noodle collection with style. Organize, categorize, and manage all your noodle types.</p>
+                <a href="noodle_inventory.html" class="project-link">PLAY →</a>
+            </div>
+
+            <div class="project-card">
+                <h3>Cen's Todo List</h3>
+                <p>Task management with style. Keep track of what needs to be done.</p>
+                <a href="cen-todo-list.html" class="project-link">OPEN →</a>
+            </div>
+
+            <div class="project-card">
+                <h3>Cen Sunday Todo</h3>
+                <p>Weekly task planner. Organize your Sunday activities.</p>
+                <a href="cen-sunday-todo.html" class="project-link">OPEN →</a>
             </div>
 
             <div class="project-card">
                 <h3>Weekend Planner</h3>
-                <p>Plan out your weekend activities with this arcade-themed scheduler.</p>
-                <a href="weekend%20planner.html" class="project-link">VIEW →</a>
+                <p>Plan your weekend activities and keep track of your schedule.</p>
+                <a href="weekend planner.html" class="project-link">OPEN →</a>
             </div>
 
             <div class="project-card">
-                <h3>Todo Lists</h3>
-                <p>Multiple todo list implementations for different planning styles.</p>
-                <a href="cen-todo-list.html" class="project-link">VIEW →</a>
+                <h3>Zach Work Schedule</h3>
+                <p>Track work shifts and schedule information.</p>
+                <a href="zach_work_schedule.html" class="project-link">OPEN →</a>
+            </div>
+
+            <div class="project-card">
+                <h3>Zach Errands</h3>
+                <p>Manage your errands and to-do items.</p>
+                <a href="zach-errands.html" class="project-link">OPEN →</a>
+            </div>
+
+            <div class="project-card">
+                <h3>Parlay Probability Viz</h3>
+                <p>Visualize and calculate parlay betting probabilities.</p>
+                <a href="parlay_probability_viz.html" class="project-link">OPEN →</a>
+            </div>
+        </div>
+
+        <div class="section-title">📖 STORIES & CONTENT</div>
+        <div class="projects-grid">
+            <div class="project-card">
+                <h3>Zach Sleep Letter</h3>
+                <p>A letter about the importance of sleep. Thoughtful and informative.</p>
+                <a href="zach-sleep-letter.html" class="project-link">READ →</a>
+            </div>
+
+            <div class="project-card">
+                <h3>Borscht Recipe</h3>
+                <p>Interactive borscht recipe. Learn to make this classic dish!</p>
+                <a href="borscht.html" class="project-link">READ →</a>
+            </div>
+
+            <div class="project-card">
+                <h3>Bushwick</h3>
+                <p>Explore the neighborhood with this interactive guide.</p>
+                <a href="bushwick.html" class="project-link">READ →</a>
+            </div>
+
+            <div class="project-card">
+                <h3>Alex's Dog Mess</h3>
+                <p>A story about dog mishaps and cleanup.</p>
+                <a href="alex_dog_mess.html" class="project-link">READ →</a>
+            </div>
+
+            <div class="project-card">
+                <h3>Cen's Veggie Haul</h3>
+                <p>A story about vegetable shopping and cooking adventures.</p>
+                <a href="cen_veggie_haul.html" class="project-link">READ →</a>
+            </div>
+
+            <div class="project-card">
+                <h3>Rat Bushwick</h3>
+                <p>A tale from the streets of Bushwick.</p>
+                <a href="rat_bushwick.html" class="project-link">READ →</a>
+            </div>
+
+            <div class="project-card">
+                <h3>Red Siren Protocol</h3>
+                <p>A noir-themed alert system and warning page.</p>
+                <a href="red-siren-protocol.html" class="project-link">READ →</a>
+            </div>
+
+            <div class="project-card">
+                <h3>Rubi Infomercial</h3>
+                <p>An over-the-top infomercial experience.</p>
+                <a href="rubi_infomercial.html" class="project-link">READ →</a>
+            </div>
+
+            <div class="project-card">
+                <h3>Sampson Deodorant</h3>
+                <p>A humorous product page for a fictional deodorant.</p>
+                <a href="sampson_deodorant.html" class="project-link">READ →</a>
             </div>
 
             <div class="project-card">
                 <h3>Radish Love</h3>
-                <p>A poetic celebration of radishes. Plant, grow, and enjoy your digital radish garden.</p>
-                <a href="radish_love.html" class="project-link">VIEW →</a>
+                <p>A quirky love letter to radishes.</p>
+                <a href="radish_love.html" class="project-link">READ →</a>
             </div>
 
             <div class="project-card">
-                <h3>Alex Dog Mess</h3>
-                <p>A quirky app for tracking... well, dog-related things. Check it out!</p>
-                <a href="alex_dog_mess.html" class="project-link">VIEW →</a>
+                <h3>Droid Union</h3>
+                <p>A story about robot labor rights.</p>
+                <a href="droid-union.html" class="project-link">READ →</a>
+            </div>
+
+            <div class="project-card">
+                <h3>Digital Sisyphus</h3>
+                <p>A philosophical take on digital existence.</p>
+                <a href="digital_sisyphus.html" class="project-link">READ →</a>
+            </div>
+
+            <div class="project-card">
+                <h3>Subway Sub Ratio</h3>
+                <p>An analysis of sandwich proportions.</p>
+                <a href="subway_sub_ratio.html" class="project-link">READ →</a>
+            </div>
+
+            <div class="project-card">
+                <h3>Task Warning</h3>
+                <p>A flashing noir warning page for important tasks.</p>
+                <a href="task-warning.html" class="project-link">READ →</a>
+            </div>
+
+            <div class="project-card">
+                <h3>Anniversary</h3>
+                <p>A special anniversary celebration page.</p>
+                <a href="anniversary.html" class="project-link">READ →</a>
             </div>
         </div>
     </div>
