--- a/src/peanut-city.html
+++ b/src/peanut-city.html
@@ -7,25 +7,25 @@
     <link rel="stylesheet" href="../page-theme.css">
     <style>
         body {
-            padding: 80px 20px 20px 20px;
+            padding: 50px 20px 20px 20px;
             background: #0a0a0a;
             color: #7ec8e3;
             font-family: 'Courier Prime', monospace;
-            line-height: 1.8;
+            line-height: 1.7;
             overflow-x: hidden;
         }
 
         .story-container {
-            max-width: 800px;
+            max-width: 720px;
             margin: 0 auto;
             position: relative;
         }
 
         .chapter {
-            margin-bottom: 120px;
+            margin-bottom: 60px;
             opacity: 0;
-            transform: translateY(40px);
-            transition: opacity 0.8s ease, transform 0.8s ease;
+            transform: translateY(30px);
+            transition: opacity 0.6s ease, transform 0.6s ease;
         }
 
         .chapter.revealed {
@@ -35,24 +35,23 @@
 
         .chapter-number {
             color: #00ffff;
-            font-size: 0.9em;
-            letter-spacing: 3px;
-            margin-bottom: 10px;
+            font-size: 0.8em;
+            letter-spacing: 2px;
+            margin-bottom: 6px;
             text-transform: uppercase;
         }
 
         .chapter-title {
             color: #00ffff;
-            font-size: 2em;
-            margin-bottom: 30px;
-            text-shadow: 0 0 10px rgba(0, 255, 255, 0.3);
+            font-size: 1.6em;
+            margin-bottom: 20px;
+            text-shadow: 0 0 8px rgba(0, 255, 255, 0.3);
         }
 
         .paragraph {
-            margin-bottom: 25px;
-            font-size: 1.1em;
+            margin-bottom: 18px;
+            font-size: 1.05em;
         }
-
 
         .emphasis {
             color: #ff0000;
@@ -67,26 +66,27 @@
 
         .divider {
             text-align: center;
-            margin: 60px 0;
+            margin: 35px 0;
             color: #00ffff;
-            font-size: 1.5em;
-            letter-spacing: 10px;
+            font-size: 1.3em;
+            letter-spacing: 8px;
         }
 
         .twist-reveal {
             background: linear-gradient(180deg, #0a0a0a 0%, #1a0a0a 50%, #0a0a0a 100%);
-            padding: 60px 30px;
-            margin: 80px -30px 40px -30px;
+            padding: 40px 25px;
+            margin: 50px -20px 30px -20px;
             border-top: 2px solid #ff0000;
             border-bottom: 2px solid #ff0000;
             text-align: center;
         }
 
         .twist-reveal .reveal-text {
-            font-size: 1.3em;
+            font-size: 1.15em;
             color: #ff0000;
-            text-shadow: 0 0 20px rgba(255, 0, 0, 0.5);
+            text-shadow: 0 0 15px rgba(255, 0, 0, 0.5);
             animation: pulse 2s infinite;
+            line-height: 1.8;
         }
 
         @keyframes pulse {
@@ -95,25 +95,25 @@
         }
 
         .epilogue {
-            margin-top: 100px;
-            padding: 40px;
+            margin-top: 50px;
+            padding: 25px;
             border: 1px solid #00ffff;
             background: rgba(0, 255, 255, 0.05);
         }
 
         .signature {
             text-align: right;
-            margin-top: 40px;
+            margin-top: 25px;
             color: #00ffff;
             font-style: italic;
         }
 
         .progress-indicator {
             position: fixed;
-            top: 60px;
-            right: 20px;
-            width: 4px;
-            height: 200px;
+            top: 50px;
+            right: 15px;
+            width: 3px;
+            height: 150px;
             background: rgba(126, 200, 227, 0.2);
             border-radius: 2px;
             z-index: 100;
@@ -125,49 +125,50 @@
             background: #00ffff;
             border-radius: 2px;
             transition: height 0.3s ease;
-            box-shadow: 0 0 10px rgba(0, 255, 255, 0.5);
+            box-shadow: 0 0 8px rgba(0, 255, 255, 0.5);
         }
 
         /* Audio Controls - Noir Style */
         .audio-controls {
             position: fixed;
-            bottom: 20px;
-            right: 20px;
+            bottom: 15px;
+            right: 15px;
             background: rgba(10, 10, 10, 0.95);
             border: 1px solid #00ffff;
-            border-radius: 8px;
-            padding: 15px;
-            box-shadow: 0 0 20px rgba(0, 255, 255, 0.2);
+            border-radius: 6px;
+            padding: 12px;
+            box-shadow: 0 0 15px rgba(0, 255, 255, 0.2);
             z-index: 1000;
             font-family: 'Courier Prime', monospace;
-            min-width: 200px;
+            min-width: 180px;
         }
 
         .audio-controls h4 {
-            font-size: 11px;
+            font-size: 10px;
             color: #00ffff;
-            margin-bottom: 8px;
+            margin: 0 0 6px 0;
             text-transform: uppercase;
             letter-spacing: 2px;
         }
 
         .narrator-name {
             color: #ff0000;
-            font-size: 13px;
-            margin-bottom: 10px;
-            text-shadow: 0 0 10px rgba(255, 0, 0, 0.3);
+            font-size: 12px;
+            margin-bottom: 8px;
+            text-shadow: 0 0 8px rgba(255, 0, 0, 0.3);
         }
 
         .audio-btn {
-            padding: 8px 14px;
-            margin: 3px;
+            padding: 6px 12px;
+            margin: 2px;
             border: 1px solid;
             border-radius: 4px;
             cursor: pointer;
             font-family: 'Courier Prime', monospace;
-            font-size: 12px;
+            font-size: 11px;
             transition: all 0.2s;
             background: transparent;
+            touch-action: manipulation;
         }
 
         .audio-btn.play {
@@ -177,7 +178,7 @@
 
         .audio-btn.play:hover {
             background: rgba(0, 255, 65, 0.2);
-            box-shadow: 0 0 10px rgba(0, 255, 65, 0.3);
+            box-shadow: 0 0 8px rgba(0, 255, 65, 0.3);
         }
 
         .audio-btn.pause {
@@ -199,18 +200,18 @@
         }
 
         .audio-status {
-            font-size: 11px;
+            font-size: 10px;
             color: #5a9fb0;
-            margin-top: 8px;
+            margin-top: 6px;
         }
 
         .voice-select {
             width: 100%;
-            padding: 6px;
-            margin-top: 8px;
+            padding: 5px;
+            margin-top: 6px;
             border: 1px solid #00ffff;
             border-radius: 4px;
-            font-size: 11px;
+            font-size: 10px;
             background: #0a0a0a;
             color: #7ec8e3;
             font-family: 'Courier Prime', monospace;
@@ -223,29 +224,37 @@
 
         /* Reading highlight - noir style */
         .reading {
-            background: rgba(255, 0, 0, 0.1);
+            background: rgba(255, 0, 0, 0.08);
             border-left: 2px solid #ff0000;
-            padding-left: 15px;
-            margin-left: -17px;
+            padding-left: 12px;
+            margin-left: -14px;
             transition: all 0.3s;
         }
 
         @media (max-width: 768px) {
+            body {
+                padding: 45px 15px 15px 15px;
+            }
+
             .chapter-title {
-                font-size: 1.5em;
+                font-size: 1.4em;
             }
 
             .paragraph {
                 font-size: 1em;
             }
 
+            .chapter {
+                margin-bottom: 45px;
+            }
+
             .twist-reveal {
-                margin: 60px -20px 30px -20px;
-                padding: 40px 20px;
+                margin: 35px -15px 25px -15px;
+                padding: 30px 15px;
             }
 
             .twist-reveal .reveal-text {
-                font-size: 1.1em;
+                font-size: 1em;
             }
 
             .progress-indicator {
@@ -262,19 +271,25 @@
 
         @media (max-width: 480px) {
             body {
-                padding: 70px 15px 15px 15px;
+                padding: 40px 12px 12px 12px;
             }
 
             .chapter-title {
-                font-size: 1.3em;
+                font-size: 1.25em;
             }
 
             .paragraph {
                 font-size: 0.95em;
+                margin-bottom: 14px;
             }
 
             .chapter {
-                margin-bottom: 80px;
+                margin-bottom: 35px;
+            }
+
+            .epilogue {
+                padding: 18px;
+                margin-top: 35px;
             }
         }
     </style>
@@ -287,9 +302,9 @@
     </div>
 
     <div class="story-container">
-        <header style="text-align: center; margin-bottom: 80px;">
-            <h1 style="color: #ff0000; font-size: 3em; text-shadow: 0 0 20px rgba(255, 0, 0, 0.4); margin-bottom: 10px;">PEANUT CITY</h1>
-            <p style="color: #00ffff; font-size: 1.2em; letter-spacing: 2px;">A Tale of Shells and Secrets</p>
+        <header style="text-align: center; margin-bottom: 40px;">
+            <h1 style="color: #ff0000; font-size: 2.5em; text-shadow: 0 0 15px rgba(255, 0, 0, 0.4); margin-bottom: 8px;">PEANUT CITY</h1>
+            <p style="color: #00ffff; font-size: 1.1em; letter-spacing: 2px;">A Tale of Shells and Secrets</p>
         </header>
 
         <div class="chapter" data-chapter="1">
@@ -427,9 +442,9 @@
             </div>
         </div>
 
-        <div style="text-align: center; margin: 100px 0 40px 0; color: #00ffff; font-size: 0.9em; letter-spacing: 2px;">
+        <div style="text-align: center; margin: 50px 0 30px 0; color: #00ffff; font-size: 0.85em; letter-spacing: 2px;">
             THE END<br>
-            (OR IS IT THE BEGINNING?)
+            <span style="font-size: 0.9em; opacity: 0.7;">(OR IS IT THE BEGINNING?)</span>
         </div>
     </div>
 
@@ -520,88 +535,114 @@
         // ========================================
         const synth = window.speechSynthesis;
         let voices = [];
+        let selectedVoice = null;
         let currentUtterance = null;
         let isPlaying = false;
         let isPaused = false;
         let paragraphs = [];
         let currentParagraphIndex = 0;
 
-        // Bot Sportello's voice - Ralph only
-        const DETECTIVE_VOICE_KEYWORDS = [
-            'Ralph',      // Bot Sportello's voice - no other choice
-        ];
+        // Preferred voices in order (noir detective style)
+        const PREFERRED_VOICES = ['Ralph', 'Daniel', 'Tom', 'Alex', 'Fred'];
 
-        // Get all story text
+        // Get all story text in document order
         function getStoryText() {
-            const chaptersEl = document.querySelectorAll('.chapter');
             const texts = [];
+            const storyContainer = document.querySelector('.story-container');
 
-            chaptersEl.forEach(chapter => {
-                const chapterTitle = chapter.querySelector('.chapter-title');
-                if (chapterTitle) {
-                    texts.push({ element: chapterTitle, text: chapterTitle.textContent });
+            // Get all readable elements in order
+            const elements = storyContainer.querySelectorAll('.chapter-title, .paragraph, .reveal-text');
+
+            elements.forEach(el => {
+                let text = el.textContent.trim();
+                if (text) {
+                    // Clean up line breaks in reveal text
+                    text = text.replace(/\s+/g, ' ');
+                    texts.push({ element: el, text: text });
                 }
-
-                const paras = chapter.querySelectorAll('.paragraph');
-                paras.forEach(p => {
-                    texts.push({ element: p, text: p.textContent });
-                });
             });
-
-            // Add twist reveal
-            const twist = document.querySelector('.twist-reveal .reveal-text');
-            if (twist) {
-                texts.push({ element: twist, text: twist.textContent.replace(/<br>/g, '. ') });
-            }
 
             return texts;
         }
 
-        // Find Ralph voice - Bot Sportello's only voice
-        function findDetectiveVoice(voiceList) {
-            // Ralph only - no other choices
-            const ralph = voiceList.find(v =>
-                v.name.includes('Ralph') &&
-                v.lang.startsWith('en')
-            );
-            return ralph || null;
+        // Find best available voice
+        function findBestVoice(voiceList) {
+            if (!voiceList || voiceList.length === 0) return null;
+
+            // Try preferred voices in order
+            for (const name of PREFERRED_VOICES) {
+                const match = voiceList.find(v =>
+                    v.name.includes(name) && v.lang.startsWith('en')
+                );
+                if (match) return match;
+            }
+
+            // Fallback: any English male-sounding voice
+            const englishVoices = voiceList.filter(v => v.lang.startsWith('en'));
+            if (englishVoices.length > 0) {
+                // Prefer voices that sound more "noir" (lower/male names)
+                const maleNames = ['David', 'James', 'John', 'Mark', 'Paul'];
+                for (const name of maleNames) {
+                    const match = englishVoices.find(v => v.name.includes(name));
+                    if (match) return match;
+                }
+                return englishVoices[0];
+            }
+
+            // Last resort: any voice
+            return voiceList[0];
         }
 
-        // Load Ralph voice only
+        // Load and populate voices
         function loadVoices() {
             voices = synth.getVoices();
             const select = document.getElementById('voiceSelect');
+            if (!select) return;
+
             select.innerHTML = '';
 
-            // Find Ralph - the only choice
-            const ralph = findDetectiveVoice(voices);
-
-            if (!ralph) {
-                select.innerHTML = '<option value="">Ralph not available</option>';
-                document.getElementById('audioStatus').textContent = 'Ralph voice not found';
+            if (voices.length === 0) {
+                select.innerHTML = '<option value="">Loading...</option>';
                 return;
             }
 
-            // Ralph only - no other choices
-            const option = document.createElement('option');
-            option.value = '0';
-            option.textContent = `Ralph (${ralph.lang})`;
-            option.selected = true;
-            select.appendChild(option);
+            // Find best voice
+            selectedVoice = findBestVoice(voices);
 
-            document.getElementById('audioStatus').textContent = 'Voice: Ralph';
+            // Populate dropdown with English voices
+            const englishVoices = voices.filter(v => v.lang.startsWith('en'));
+            englishVoices.forEach((voice, idx) => {
+                const option = document.createElement('option');
+                option.value = idx;
+                option.textContent = `${voice.name}`;
+                if (voice === selectedVoice) option.selected = true;
+                select.appendChild(option);
+            });
+
+            const voiceName = selectedVoice ? selectedVoice.name.split(' ')[0] : 'Default';
+            document.getElementById('audioStatus').textContent = `Voice: ${voiceName}`;
         }
 
         // Initialize voices
         if (synth.onvoiceschanged !== undefined) {
             synth.onvoiceschanged = loadVoices;
         }
+        // Try loading immediately and after a delay (browser quirk)
         loadVoices();
+        setTimeout(loadVoices, 100);
 
-        function changeVoice() {}
+        function changeVoice() {
+            const select = document.getElementById('voiceSelect');
+            const englishVoices = voices.filter(v => v.lang.startsWith('en'));
+            const idx = parseInt(select.value);
+            if (!isNaN(idx) && englishVoices[idx]) {
+                selectedVoice = englishVoices[idx];
+                document.getElementById('audioStatus').textContent = `Voice: ${selectedVoice.name.split(' ')[0]}`;
+            }
+        }
 
         function getSelectedVoice() {
-            return findDetectiveVoice(voices);
+            return selectedVoice || findBestVoice(voices);
         }
 
         function highlightParagraph(element) {
